[gd_scene load_steps=15 format=3 uid="uid://crkwqxkulmmf1"]

[ext_resource type="Texture2D" uid="uid://cd4hlrl5d5tcf" path="res://assets/backgrounds/neon-hot-pink-hd-landscape.jpg" id="1_c0oph"]
[ext_resource type="Script" path="res://scenes/menu/settings_ui.gd" id="1_rpx8o"]
[ext_resource type="Shader" path="res://scenes/menu/panel.gdshader" id="2_on0ao"]
[ext_resource type="Texture2D" uid="uid://cxuqcc5r3kss5" path="res://assets/ui/slider.png" id="3_cw5l8"]
[ext_resource type="LabelSettings" uid="uid://b6ceii078b0fl" path="res://assets/fonts/labelsetting.tres" id="3_cxv25"]
[ext_resource type="Texture2D" uid="uid://cmquybatijq1d" path="res://assets/ui/Back_Button.png" id="6_3v1cc"]
[ext_resource type="AudioStream" uid="uid://dnhkxpdpcsemr" path="res://assets/musics/Step Back - Menu Theme.mp3" id="6_r2f0i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8ljq"]
shader = ExtResource("2_on0ao")
shader_parameter/zoom = 20.0
shader_parameter/wave_crop = 0.0
shader_parameter/brightness = 1.0
shader_parameter/speed = 1.0
shader_parameter/iterations = 5.0
shader_parameter/freq_start = 20.0
shader_parameter/freq_coeff = 1.0

[sub_resource type="Gradient" id="Gradient_yxjee"]
colors = PackedColorArray(0, 0, 0, 0.286275, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kr256"]
gradient = SubResource("Gradient_yxjee")
fill_from = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhld5"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6asgq"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.899169, 0.131029, 0.557456, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.786588, 0, 0.200164, 1)
shadow_size = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jglwg"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.899169, 0.131029, 0.557456, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.786588, 0, 0.200164, 1)
shadow_size = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bexl"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.899169, 0.131029, 0.557456, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.786588, 0, 0.200164, 1)
shadow_size = 16

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rpx8o")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_r8ljq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c0oph")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_kr256")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="MarginContainer"]
self_modulate = Color(0, 0, 0, 0.298039)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_vhld5")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -148.0
offset_right = 288.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = ExtResource("3_cxv25")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master Volume"
label_settings = ExtResource("3_cxv25")

[node name="HSlider" type="HSlider" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/grabber = ExtResource("3_cw5l8")
theme_override_icons/grabber_highlight = ExtResource("3_cw5l8")
theme_override_styles/slider = SubResource("StyleBoxFlat_6asgq")
max_value = 1.0
step = 0.01
value = 0.65

[node name="SFXVolume" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 63

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "SFX Volume"
label_settings = ExtResource("3_cxv25")

[node name="HSlider" type="HSlider" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/grabber = ExtResource("3_cw5l8")
theme_override_icons/grabber_highlight = ExtResource("3_cw5l8")
theme_override_styles/slider = SubResource("StyleBoxFlat_jglwg")
max_value = 1.0
step = 0.01
value = 0.65

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music Volume"
label_settings = ExtResource("3_cxv25")

[node name="HSlider" type="HSlider" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/grabber = ExtResource("3_cw5l8")
theme_override_icons/grabber_highlight = ExtResource("3_cw5l8")
theme_override_styles/slider = SubResource("StyleBoxFlat_7bexl")
max_value = 1.0
step = 0.01
value = 0.65

[node name="Button" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(128, 72)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("6_3v1cc")
ignore_texture_size = true
stretch_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_r2f0i")
autoplay = true
bus = &"Songs"

[connection signal="value_changed" from="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/MasterVolume/HSlider" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/SFXVolume/HSlider" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/MusicVolume/HSlider" to="." method="_on_music_value_changed"]
[connection signal="button_down" from="MarginContainer/Button" to="." method="exit"]
